--- a/Proje/MemleketTanıtım.html
+++ b/Proje/MemleketTanıtım.html
@@ -18,16 +18,21 @@
     <div class="clear"></div>
     </div>
     <div id="bosluk">&nbsp;</div>
+    <form action="anasayfa.html" method="post">
     <div>
         <div style="text-align: center;">
         <img style="width:40px ;margin-top:10px;" src="email.png">
         <label><h4>SAU Mail</h4></label>
-        <input type="email" style="width: 25%;" placeholder="Üniversite Mailinizi Giriniz..."><br>
+        <input type="email" style="width: 25%;" placeholder="Üniversite Mailinizi Giriniz..." required><br>
         <div id="bosluk">&nbsp;</div>
         <label><h4>Şifre</h4></label>
-        <input type="text" style="width: 25%;" placeholder="Şifre Giriniz...">
-        </div>
+        <input type="text" style="width: 25%;" placeholder="Şifre Giriniz..." required>
+        <div style="padding-top: 10px;"> <input type="submit"  value="Giriş Yap" id="login"> </div>    
         <div id="bosluk">&nbsp;</div>
+    </div>
+    </form>
+        
+        
     </div>
 <br>
 <br>
