--- a/Proje/Home.html
+++ b/Proje/Home.html
@@ -45,7 +45,7 @@
 
         <h1  id="Adıyaman">Adıyaman</h1>
         <a class="Sett" href="Home.html">AnaSayfa</a>
-        <a class="Sett" href="#">Deprem</a>
+        <a class="Sett" href="Untitled-1.html">Deprem</a>
         <a class="Sett" href="#">Öğrenci</a>
         <a class="Sett" href="#">Tarihçe</a>
     </nav>
@@ -60,7 +60,7 @@
     <br>
     <a href="#"><img id="nfs"src="ikizkenar-piramit.png.webp"></a>
     <div id="weather" style="width: 35%;"> 
-            <h2 " id="city"></h2>
+            <h2  id="city"></h2>
             <img id="icon" />
             <p   id="temp"></p>
             <p id="description"></p>
