Tarihçe Sayfası açılımı ve Stil Düzenlemesi
Tarihçe sayfasını açıp yarı düzenleme yapıldı. Birkaç farklı fixleme yapıldı

--- a/Proje/Home.html
+++ b/Proje/Home.html
@@ -45,9 +45,9 @@
 
         <h1  id="Adıyaman">Adıyaman</h1>
         <a class="Sett" href="Home.html">AnaSayfa</a>
-        <a class="Sett" href="Untitled-1.html">Deprem</a>
+        <a class="Sett" href="Deprem.html">Deprem</a>
         <a class="Sett" href="#">Öğrenci</a>
-        <a class="Sett" href="#">Tarihçe</a>
+        <a class="Sett" href="Tarihçe.html">Tarihçe</a>
     </nav>
     <div id="welco" >Hoş Geldiniz...</div>
     
@@ -58,7 +58,7 @@
     <br>
     <br>
     <br>
-    <a href="#"><img id="nfs"src="ikizkenar-piramit.png.webp"></a>
+    <a href="PP.html"><img id="nfs"src="ikizkenar-piramit.png.webp"></a>
     <div id="weather" style="width: 35%;"> 
             <h2  id="city"></h2>
             <img id="icon" />
