--- a/Proje/PP.html
+++ b/Proje/PP.html
@@ -21,23 +21,52 @@
         <td class="woman"> 38.237</td>
         </tr>
         <tr>
-        <td class="man"> 38.970</td>
-        <th class="country">Besni</th>
-        <td class="woman"> 38.237</td>
+        <td class="man">7.944</td>
+        <th class="country">Çelikhan</th>
+        <td class="woman"> 7.450</td>
         </tr>
         <tr>
-        <td class="man"> 38.970</td>
-        <th class="country">Besni</th>
-        <td class="woman"> 38.237</td>
+        <td class="man">8.221</td>
+        <th class="country">Gerger</th>
+        <td class="woman">8.195</td>
         </tr>
         <tr>
-        <td class="man"> 38.970</td>
-        <th class="country">Besni</th>
-        <td class="woman"> 38.237</td>
+        <td class="man">25.218</td>
+        <th class="country">Gölbaşı</th>
+        <td class="woman">24.932</td>
         </tr>
-
-
+        <tr>
+        <td class="man">64.913</td>
+        <th class="country">Kahta</th>
+        <td class="woman">62.621</td>
+        </tr>
+        <tr>
+            <td class="man">156.565</td>
+            <th class="country">Merkez</th>
+            <td class="woman">155.642</td>
+        </tr>
+        <tr>
+            <td class="man">3.769</td>
+            <th class="country">Samsat</th>
+            <td class="woman">3.544</td>
+        </tr>
+        <tr>
+                <td class="man">8.139</td>
+                <th class="country">Sincik</th>
+                <td class="woman">8.202</td>
+        </tr>
+        <tr>
+            <td class="man">4.980</td>
+            <th class="country">Tut</th>
+            <td class="woman">4.706</td>
+        </tr>
     </table>
+    <p style="background-color: white; ">
+        <span style="color:darkred">Nüfus</span><br>
+        Türkiye İstatistik Kurumu'nun (TÜİK) hazırlamış olduğu 2021 yılı Adrese Dayalı Nüfus Kayıt Sistemi (ADNKS) sonuçlarına göre Adıyaman’ın nüfusu <span style="background-color: black; color:white">632.148</span> kişidir. İlimizin il/ilçe ve belde/köy nüfus dağılımı verilmiştir.
+         
+        Ayrıca, 2021 yılı il ve ilçelere göre nüfus dağılımı yukarıdaki tabloda verilmiştir.
 
+    </p>
 </body>
 </html>
