--- a/Proje/Tarihçe.html
+++ b/Proje/Tarihçe.html
@@ -9,36 +9,50 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Tarihçe.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adıyaman'ın Tarihi Değerleri</title>
 </head>
 <body style="background-image: url(tarihce.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+  <nav class="navbar" >
+   
+    <h1  id="Adıyaman" style="margin-left: 5%;">Adıyaman</h1>
+    <a class="Sett"  href="Home.html">AnaSayfa</a>
+    <a class="Sett" href="Deprem.html">Deprem</a>
+    <a class="Sett" href="#">Öğrenci</a>
+    <a class="Sett" href="Tarihçe.html" style="margin-right: 5%;">Tarihçe</a>
+</nav>
     <div class="card" style="width: 18rem; float:left;">
         <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kahta Kalesi\kapak.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Kahta Kalesi</h5>
           <p class="card-text">Komagene,Roma, Memlük,Selçuklu,Osmanlıların kullandığı tarihi bir kale şimdiki Kâhta'nın 20 km kuzeyinde Arsameia'nın hemen karşısında, Kocahisar köyünde (Eski Kâhta) bulunuyor. Kalenin kesin yapım tarihi bilinmemekle birlikte M.Ö 2.yy'da Hititlerden kaldığı sanılmaktadır.</p>
-          <a href="#600px" class="btn btn-primary" >Go to the images</a>
+          <a href="#600px" class="btn btn-primary" >Go to the Images</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float:left; position:relative; left:20%;">
+      <div class="card" style="width: 18rem; float:left; position:absolute; left:40%;">
         <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kaya Mezarları ve Anıtları\Kapak.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Kaya Mezarları ve Anıtları</h5>
           <p class="card-text">TURUŞ KAYA MEZARLARI
 
             Adıyaman Şanlıurfa karayolu 40.km’sinde Turuş (Kuyulu) köyünün bir km batısındadır. Tamamen kaya bir tepe üzerinde Roma dönemine ait 60 kadar kaya mezarından oluşmaktadır. Bazı kaya mezarlarının duvarlarında çeşitli hayvan ve insan kabartmaları ile betimler yer almaktadır.</p>
-          <a href="#1600px" class="btn btn-primary">Go to the İmages</a>
+          <a href="#1600px" class="btn btn-primary">Go to the Images</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;float:right;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\karakustepesi.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#1600px" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Tümülüs ve Höyükler</h5>
+          <p class="card-text">Kommagene Krallığının soylu kadınlarının gömülü olduğu bu tümülüsten Nemrut Dağı çok rahat görünmekte ve sanki kadınlar buradan Nemrut'a bakarcasına yatmaktadırlar.</p>
+          <a href="#2000px" class="btn btn-primary">Go to the Images</a>
         </div>
       </div>
       <div>&nbsp;</div>
@@ -70,7 +84,7 @@
         </button>
       </div>
       <h4 style="text-align: center; color:rgb(1, 1, 1);">Kahta Kalesi</h4>
-      <p id="kahtap">
+      <p class="kahtap">
         İlk kuruluşu Kommagene Krallığı zamanında olan Eski Kahta Kalesi (Yeni Kale) ile arasında geçen Kahta çayının batı tarafındaki sarp kayalıklar üzerinde kurulmuştur. Daha sonra Romalılar tarafından da kullanıldığı ve şekillendirildiği bilinmektedir.
 
 Sarp yamaçlar üzerine kurulan bu kalenin hangi teknolojik güçlerle yapıldığı insanı hayrete düşürmektedir. Daha sonraki dönemlerde ilaveler ve değişiklikler yapılmıştır.
@@ -96,7 +110,123 @@ Kültür ve Turizm Bakanlığı'nın 2012'de başlattığı restorasyon çalış
     </div>
     <div>&nbsp;</div>
     
+    <div id="1600px" style="margin-top:1600px ;width: 60%; height: 60%; position:absolute; left:20%">
+      <div id="carouselExampleIndicator" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicator" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicator" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicator" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" >
+        <div class="carousel-item active">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kaya Mezarları ve Anıtları\_OMR3707.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kaya Mezarları ve Anıtları\_OMR3695.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kaya Mezarları ve Anıtları\_OMR3686.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicator" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicator" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
+    <h4 style="text-align: center; color:rgb(1, 1, 1);">Kaya Mezarları ve Anıtları</h4>
+    <p class="kahtap">
+      KAYA ANITLARI<br>
+ 
+        Mal Pınar Kaya Anıtı : Adıyaman merkez durak köyü Mal Pınar mezrasının kuzeybatısındadır. Göksu çayı vadisindeki Mal Pınar<br> su kaynağının solundaki kaya üzerine 18x85 cm. ebadında bir kitabedir.
+        
+        Haydaran Kaya Anıtı : İlimiz merkez Taşgedik köyü sınırları içerisindedir. Kabartma Kommagene döneminde ana kaya üzerine diktörtgen bir niş içine yapılmış, güneş tanrısı Helios ile Kommagene kralı Mithridates’in karşılıklı ayakta durmalarını tasvir etmektedir.
+    </p>
+  </div>
+  <div id="nmr">
+    <h3 style="text-align: center;">Ören Yerleri</h3><br>
+    <h4>NEMRUT DAĞI ÖREN YERİ</h4>
+    <p  class="nmt">
+      Adıyaman’a 86 km Kahta ilçesine 51km uzaklıktadır. Dünyanın 8. harikası olarak anılan ve UNESCO Kültür Mirası 
+      Listesinde yer alan bu yer Doğu Toros Sıradağlar üzerinde 2150m yüksekliğinde, Fırat nehri geçitlerine ve ovaya hakim bir tepe üzerindedir. Kommagene Kralı 1. Anticeos ‘a ( Antikos) anakaya üzerinde bir anıt mezar yapılmış ve üzerine kırma taşlar yığılarak büyük bir tepe biçiminde tümlüs oluşturulmuştur. Tümülüsün Doğu Batı ve Kuzeyindeki kayalıklara 9-10 metre boyutlarında dev kral ve tanrı, kartal ve aslan heykelleri konulmuştur.
+    </p>
+    <img style="width: 70%; height: 70%; position: relative; left:15%;" src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\ADIYAMAN-Nemrut Dağı-2.jpg">
+    <h4>ARSAMEİA KUTSAL ALANI</h4>
+    <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\082.jpg">
+    <p class="nmt">
+      Adıyaman ili, kahta ilçesi sınırları içerisinde yer almaktadır. M.Ö. 3.YY da ( Hellenistik dönem) yaşamış arsemes tarafından kurulduğu için bu isimle anılmıştır. Prehistorik dönemden sonra Hellenestik, Roma ve orta çağda da yerleşim yeri olarak kullanılmıştır. Güneydeki tren yolunda Mitras’ın kabartma stili bulunmaktadır.
+    </p>
+    <h4>PİRİN ÖREN YERİ (PERRE ANTİK KENT)</h4>
+    <img  style="width: 70%; position: relative; left:15%;" src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\DOM_3165.jpg" >
+    <p class="nmt">
+      Adıyaman’a 5km. uzaklıkta Örenli mahallesi sınırları içerisindedir. Perre şehri, Kommagene ülkesinin 5 büyük şehrinden biridir. Günümüzde çok az bir kalıntı ulaşmıştır. Antikkentte sur duvarları, halen halk tarafından kullanılmakta olan çeşme ve 200’e yakın kaya mezarının bulunduğu Nekropol yer almaktadır.
+    </p>
+    <h4>DERİK KUTSAL ALANI</h4>
+    <img style="width: 70%; position: relative; left:15%;" src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\DOM_6333.jpg">
+    <p class="nmt">
+      İlimiz Sincik ilçesi Çatbahçe sınırları içerisindedir. 125m yükseklikte iki tepe arasındaki düzlük alana kurulmuştur. Burada bir tapınak ve kutsal Temenus ( çevre duvarı) ile simetrik yapıda iki adet “hercon” yer almaktadır.
+      <br>
+      <br>
+      <span style="margin-left:15%">PALANLI MAĞARASI</span>
+      <br>
+      <br>
+      Paleolithik dönem (taş devri) insanın yaşadığı dönemde kullanılmıştır M.Ö. 40,000 yıllarına kadar uzanan dönemde avcılık ve toplayıcılıkla uğraşan halkın mağara duvarlarına çizdikleri dağ keçisi ve geyik gibi hayvan resimleri günümüze kadar tahrip olmadan gelmiştir.
+    </p> 
+    <div id="2000px" style="width: 60%; height: 60%; position:absolute; left:20%">
+      <div id="carouselExampleIndicatorr" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicatorr" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicatorr" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicatorr" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" >
+        <div class="carousel-item active">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\karakus_1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\karakus_2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\karakus_4.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicatorr" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicatorr" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
+    <h4 style="text-align: center; color:rgb(1, 1, 1);">KARAKUŞ TÜMÜLÜSÜ</h4>
+    <p class="kahtap">
+      KOMMAGENELİ KADINLARIN GÖMÜLÜ OLDUĞU ANIT-MEZARI<br>
+ 
+      Kommagene Kralı 2. Mithradates tarafından annesi İsias adına yaptırılan bu anıt mezar, sütün üzerindeki "kartal"dan dolayı Karakuş Tümülüsü olarak halk arasında anılagelmiştir.<br>
 
+Antiochos'tan sonra tahta oğlu 2. Mithradates geçti. Kommagene Roma İmparatorluğu'na yenilmiş ve 2.Mithradates'in yönetimindeki Kommagene Suriye'nin önce uydusu sonrada eyaleti haline gelir. <br>
+
+Bu arada Romalılara karşı verilen savaşta oğlunu kaybeden Part Kralı'nın acısı o kadar derindir ki kendi arzusuyla tahtından feragat eder. Velihat prensin dedesi Antiochos'un Kommagene'yi riske atarak krallığına sığınan Part askerlerini koruması da babanın üzüntüsünü hafifletmemiştir. Part Kralının yerine oğullarından biri geçer.
+
+<br>Bu acımasız bir hükümdardı ve tahtını tehlikeye atacağına inandığı, Laodike ve onun çocukları dahil, kimseyi öldürtmekten kaçınmaz. 2.Mithridates kız kardeşini Kommagene topraklarındaki Karakuş mezar tepesine gömer. Laodike'nin kabrine üzerinde 'o tüm kadınların en güzeliydi' yazan çok güzel bir taş yazıt koyar.
+
+<br>Mithradates Karakuş'u Kahta Çayı'nın kıyısında yaptırmıştır. Annesi İsias, diğer bir kız kardeşi Antiochis ve onun kızı Aka da orada yatmaktadırlar. Mithradates yazlık malikanesinin terasından derin çaya inen baş döndürücü vadiyi ve Karakuş'un seyreder böylelikle ölümlerinden sonra da sevdiklerini yanında hissedebilirdi. Kıskanç kardeş 2. Antiochos 2. Mithradates'i tahttan indirmek istiyordu. Bu nedenle Roma senatosu 2. Antiochos'u ölüm cezasına çarptırdı.
+
+<br>Doğu, batı ve güney yönlerde dörder sütun varken günümüze doğuda iki batıda ve güneyde birer sütun kalmıştır.
+
+<br>Doğu sütunlarının üstünde birinde yıkık aslan heykeli, diğerinde ise üstündeki figür tamamıyla yıkılmış bir sütun durmaktadır; Bu iki sütun yan yana dikilmiştir ve hala ayakta durmaktadır.
+Batıdaki tek sütunun üstünde ise hala yok olmamış bir kabarma vardır. Bu tokalaşma stelinin hemen yanında yerde olan ve tahrif edilmiş bir Aslan heykeli parçası vardır.
+
+<br>En güzeli ve göze batanı ise "Karakuş" isminin buraya verilmesine sebep olan güneydeki sütundur. Karakuşa gidenler araba ile bu sütunun önüne kadar giderler. İşte bu sütun üzerindeki Kartal heykeli hala sağlam durmaktadır.
+Prof. Karl Dörner tarafından tümülüste bazı kazı çalışmaları yapılmıştır. Ancak neticesi kamuoyu tarafından bilinmemektedir. Tümülüsün altında kadın mezarları dışında başka bulguların olup olmadığı bilinmemektedir.
+ Nemrut Dağı giriş noktası olarak belirlenen Karakuş Tümülüsü Milli Park Koruma alanı içerisindedir. Kahta' ya 10 km mesafede olan Karakuş Tümülüsü, Kommagene Krallığı zamanında yapılmış bir anıt-mezardır.
+ Cendere, Arsameia ve Nemrut'a gidenler yol üstünde olduğu için burayı da ziyaret ederler. </p>
+  </div>
+  </div>
 
 
 </body>
