Şehrim ve Mirasım Düzenlemeleri
CSS ve Bootstrap kullanımları

--- a/Proje/HakkımdaAfter.html
+++ b/Proje/HakkımdaAfter.html
@@ -36,6 +36,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="iletisim.js">
     <title>Hakkında</title>
 </head>
 <body id="home">
@@ -70,6 +71,14 @@ Masa tenisini, futbolu ve basketbol en sevdiğim sporlardır. Satranç, bulmaca,
 <div style="float: right;; position: relative; right: 10%; top:10%" >
     <a href="https://www.linkedin.com/in/hasan-bak%C4%B1r-513060243/"><img class="iletils" src="link.png"></a>
 
+</div>
+<div style="clear: both;"></div>
+<div style="position: relative; top:150px; padding-left: 40px;">
+    <form action="Untitled-1.php" method="post">
+        Name: <input type="text" name="name"><br>
+        E-mail: <input type="text" name="email"><br>
+        <input type="submit">
+        </form>
 </div>
 </div>
 </body>
