--- a/Proje/Şehrim.html
+++ b/Proje/Şehrim.html
@@ -37,7 +37,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 </head>
-<body style="background-image: url(sehrimback.jpg); background-size: cover; background-repeat: no-repeat;">
+<body style="background-image: url(sehrimback.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <nav class="navbar">
         <h1  id="Adıyaman">Adıyaman</h1>
         <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
@@ -52,6 +52,91 @@
     <p id="description"></p>
     <h6  id="city"></h6>
 </div>
+
+
+<div id="piramit">
+  <a id="lnk" href="PP.html">
+  <h3 style="text-align:center; color: white"> Nüfusum </h3>
+  <img  style="width:60%; position: relative; left:20%" src="ikizkenar-piramit.png.webp">
+</a>
+</div>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width: 60%; position: relative; left:20%; top:40px">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="gez.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Gölbaşı Gölleri Tabiat Parkı</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="huzur.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Sugözü</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <a href="#">
+      <img class="d-block w-100" src="Adyaman Müzesi (10).jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Adıyaman Müzesi</h5>
+      </div>
+    </a>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div style="position: relative; top:200px;">
+   <img style=" width:40%;" src="tabiatp.jpg" >
+   <h4 class="headers">Gölbaşı Gölleri Tabiat Parkı</h4>
+   <p class="prg">
+    
+    Ailece piknik yapılabilecek güzel bir yer.Golbaşı ilçesi çıkışında solda.Göl kenarı ve temiz bi mekan.Yanınıza mangallık yiyeceğinizi almalısınız. Ayrıca göl kenarında yemek yiyebileceğiniz birlik anda mevcut.
+   </p>
+</div>
+
+<div style="position: relative;top: 300px;border-color: aliceblue; border-style: double;"></div>
+<div style="position:relative; top: 320px;">
+  <img style=" width:40%;" src="sugozu.jpg" >
+  <h4 class="headers">Sugözü</h4>
+  <p class="prg">
+    Köyün adı, 1919 yılı kayıtlarında Eskiköy olarak geçmektedir.[3] Yerleşim, 31 Ekim 1992 tarihinde "Eskiköy" adıyla belediye statüsü alarak beldeye çevrildi.[4] Beldenin adı 2006 yılında "Sugözü" olarak değiştirildi.[5] Sugözü'nün belediye statüsü, nüfusunun 2000 kişinin altına düşmesi üzerine 2013 yılında sona erdi.
+  </p>
+</div>
+<div style="position: relative;top: 360px;border-color: aliceblue; border-style: double;"></div>
+<div style="position: relative; top: 400px;">
+  <img style="float:left; width:40%; position: relative; left:15vh;" src="muze5.jpg" >
+  <img style="float:right; position: relative; right: 15vh;" src="muze2.webp">
+  
+  <h2 style="clear:both; text-align: center;" class="headers">Adıyaman Müzesi</h4>
+  <p class="prg">
+    Adıyaman Müzesi, 1982 yılından itibaren şehir merkezinde, tek katlı bir binada hizmet vermektedir. Müzede arkeolojik, etnografik ve sikke olmak üzere üç koleksiyon mevcuttur. Kommagene Krallığı’nın  (MÖ 163-MS 72) çok sayıda eseri müzede sergilenmektedir.  
+  </p>
+  <img style="float:left;width:40% ;position: relative;left:20vh;" src="muze3.jpg">
+  <img style="float:right; position: relative; right:20vh;" src="muze4.png" >
+  <p class="prg" style="clear:both">
+    Müze bu özelliğiyle diğer müzelerden farklılık göstermektedir. Kommagene Krallığı’nın en önemli hükümdarı I. Antiochos’un başı (MÖ 69-40) 1983 yılında yapılan Samsat kazısında ortaya çıkarılmış olup müzenin arkeoloji bölümünün en önemli eserlerindendir.
+  </p>
+  <img style="width: 60%;position: relative; left:40vh;" src="kralbaşı.jpg">
+  <p class="prg" style="clear:both;position: relative; top:15px;">     
+  Bir diğer ünik eser de 1970 yılında Kâhta İlçesi'ne bağlı Çıralık Köyü, Kilisik Mezrası'nda bulunan kült heykelidir. MÖ 7500-7000 yılına tarihlenen heykel Şanlıurfa Göbekli Tepe’deki heykellere benzerliği ile dikkat çekmektedir. 
+  </p>
+  <img style=" width:20%; position: relative; left:72vh;" src="muze1.jpg" >
+  <p class="prg" style="position: relative; top:30px;">
+    Müzede, Paleolitik Dönem'e ait çakmak taşından yapılmış el baltaları, kazıyıcılar ve kesici aletler, Neolitik Dönem'e ait çakmaktaşı ve obsidyenden ok uçları, Kalkolitik Dönem'e ait pişmiş topraktan yapılmış çeşitli kaplar, Tunç Çağı'na ait bronz mızrak uçları ve benzeri eserler, Demir Çağı'na ait hiyeroglif yazıtlar, çeşitli mutfak kapları ve süs eşyaları, Helenistik Dönem'e ait heykel, mozaik, yazıt ve çeşitli kaplar, Roma Dönemi'ne ait heykel, yazıt, mozaik, kandil, koku şişesi, çeşitli kaplar ve süs eşyaları, Doğu Roma Dönemi'ne ait çeşitli kaplar ve süs eşyaları, İslami ve özellikle Selçuklu Dönemi'ne ait sırlı kaplar, cam eserler ve süs eşyaları, Osmanlı Dönemi'ne ait çeşitli eserler ile çok sayıda altın, gümüş ve bronz sikke örnekleri sergilenmektedir.
+    
+  </p>
+</div>
+
+
 
 
 </body>
