Login ve Özgeçmiş Tasarımı
Login sayfası js yazılımı ve Özgeçmiş sayfası yapımı.

--- a/Proje/Tarihçe.html
+++ b/Proje/Tarihçe.html
@@ -21,13 +21,12 @@
     <title>Adıyaman'ın Tarihi Değerleri</title>
 </head>
 <body style="background-image: url(tarihce.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
-  <nav class="navbar" >
-   
-    <h1  id="Adıyaman" style="margin-left: 5%;">Adıyaman</h1>
-    <a class="Sett"  href="Home.html">AnaSayfa</a>
+  <nav class="navbar">
+   <a href="Şehrim.html" style="text-decoration: none;"> <h1  id="Adıyaman">Adıyaman</h1></a>
+    <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
     <a class="Sett" href="Deprem.html">Deprem</a>
-    <a class="Sett" href="#">Öğrenci</a>
-    <a class="Sett" href="Tarihçe.html" style="margin-right: 5%;">Tarihçe</a>
+    <a class="Sett" href="Şehrim.html">Şehrim</a>
+    <a class="Sett" href="Tarihçe.html">Mirasımız</a>
 </nav>
     <div class="card" style="width: 18rem; float:left;">
         <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Kahta Kalesi\kapak.jpg" class="card-img-top" alt="...">
@@ -155,7 +154,7 @@ Kültür ve Turizm Bakanlığı'nın 2012'de başlattığı restorasyon çalış
     </p>
     <img style="width: 70%; height: 70%; position: relative; left:15%;" src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\ADIYAMAN-Nemrut Dağı-2.jpg">
     <h4>ARSAMEİA KUTSAL ALANI</h4>
-    <img src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\082.jpg">
+    <img style="position: relative; left:20%;" src="C:\Users\524ha\OneDrive\Belgeler\GitHub\Web_Teknolojisi_Proje\Proje\Nemrut Dağı\082.jpg">
     <p class="nmt">
       Adıyaman ili, kahta ilçesi sınırları içerisinde yer almaktadır. M.Ö. 3.YY da ( Hellenistik dönem) yaşamış arsemes tarafından kurulduğu için bu isimle anılmıştır. Prehistorik dönemden sonra Hellenestik, Roma ve orta çağda da yerleşim yeri olarak kullanılmıştır. Güneydeki tren yolunda Mitras’ın kabartma stili bulunmaktadır.
     </p>
