--- a/Proje/Şehrim.html
+++ b/Proje/Şehrim.html
@@ -36,15 +36,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+<title>Şehrim</title>
 </head>
 <body style="background-image: url(sehrimback.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <nav class="navbar">
-        <h1  id="Adıyaman">Adıyaman</h1>
+        <a href="Şehrim.html" style="text-decoration: none;" ><h1   style="text-decoration: none;" id="Adıyaman">Adıyaman</h1></a>
         <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
         <a class="Sett" href="Deprem.html">Deprem</a>
         <a class="Sett" href="Şehrim.html">Şehrim</a>
         <a class="Sett" href="Tarihçe.html">Mirasımız</a>
-</nav>
+    </nav>
 <div id="weatherr">
     
     <img id="icon" >
@@ -55,8 +56,8 @@
 
 
 <div id="piramit">
-  <a id="lnk" href="PP.html">
-  <h3 style="text-align:center; color: white"> Nüfusum </h3>
+  <a id="lnk" style="text-decoration: none;" href="PP.html">
+  <h3 style="text-align:center; color: white;" > Nüfusum </h3>
   <img  style="width:60%; position: relative; left:20%" src="ikizkenar-piramit.png.webp">
 </a>
 </div>
@@ -64,19 +65,24 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="width: 60%; position: relative; left:20%; top:40px">
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <a href="#200px">
       <img class="d-block w-100" src="gez.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
+        
         <h5>Gölbaşı Gölleri Tabiat Parkı</h5>
       </div>
+    </a>
     </div>
     <div class="carousel-item">
+      <a href="#320px">
       <img class="d-block w-100" src="huzur.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
         <h5>Sugözü</h5>
       </div>
+      </a>
     </div>
     <div class="carousel-item">
-      <a href="#">
+      <a href="#400px">
       <img class="d-block w-100" src="Adyaman Müzesi (10).jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5>Adıyaman Müzesi</h5>
@@ -94,7 +100,7 @@
   </a>
 </div>
 
-<div style="position: relative; top:200px;">
+<div id="200px" style="position: relative; top:200px;">
    <img style=" width:40%;" src="tabiatp.jpg" >
    <h4 class="headers">Gölbaşı Gölleri Tabiat Parkı</h4>
    <p class="prg">
@@ -104,7 +110,7 @@
 </div>
 
 <div style="position: relative;top: 300px;border-color: aliceblue; border-style: double;"></div>
-<div style="position:relative; top: 320px;">
+<div id="320px" style="position:relative; top: 320px;">
   <img style=" width:40%;" src="sugozu.jpg" >
   <h4 class="headers">Sugözü</h4>
   <p class="prg">
@@ -112,10 +118,9 @@
   </p>
 </div>
 <div style="position: relative;top: 360px;border-color: aliceblue; border-style: double;"></div>
-<div style="position: relative; top: 400px;">
+<div id="400px" style="position: relative; top: 400px;">
   <img style="float:left; width:40%; position: relative; left:15vh;" src="muze5.jpg" >
   <img style="float:right; position: relative; right: 15vh;" src="muze2.webp">
-  
   <h2 style="clear:both; text-align: center;" class="headers">Adıyaman Müzesi</h4>
   <p class="prg">
     Adıyaman Müzesi, 1982 yılından itibaren şehir merkezinde, tek katlı bir binada hizmet vermektedir. Müzede arkeolojik, etnografik ve sikke olmak üzere üç koleksiyon mevcuttur. Kommagene Krallığı’nın  (MÖ 163-MS 72) çok sayıda eseri müzede sergilenmektedir.  
