--- a/Proje/HakkımdaAfter.html
+++ b/Proje/HakkımdaAfter.html
@@ -25,11 +25,12 @@
       })
       .catch
     </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="StyleDoc.css">
+    <link rel="stylesheet" type="text/css" href="hakkımda.css">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">   
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet"> 
@@ -41,11 +42,11 @@
 </head>
 <body id="home">
     <div style="background-color: rgb(0,0,0,.5); height: 100vh;">
-    <nav class="navbar">
-        <h1  id="Adıyaman">Adıyaman</h1>
-        <a class="Sett" href="Home.html">Hakkında</a>
+    <nav class="navbar" >
+        <a href="Şehrim.html" style="text-decoration: none;"><h1  id="Adıyaman">Adıyaman</h1></a>
+        <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
         <a class="Sett" href="Deprem.html">Deprem</a>
-        <a class="Sett" href="#">Şehrim</a>
+        <a class="Sett" href="Şehrim.html">Şehrim</a>
         <a class="Sett" href="Tarihçe.html">Mirasımız</a>
 </nav>
 
@@ -57,7 +58,7 @@
 <p id="hakkımda" > Ben Hasan. İstanbul'da yaşıyorum. Genelde çalışmadığım zamanlarda kitap okumayı, dizi-film izlemeyi ve yürümeyi severim.
 Masa tenisini, futbolu ve basketbol en sevdiğim sporlardır. Satranç, bulmaca, puzzle gibi aktiviteler de sevdiğim aktiviteler arasındadır.
 </p>
-<a href="#"><h1 style="text-align: center; position: relative; top:20px;border-style: double; width:45%; float: right; color:white;">
+<a href="özgeçmis.pdf"><h1 style="text-align: center; position: relative; top:20px;border-style: double; width:45%; float: right; color:white;">
 ÖZGEÇMİŞ SAYFAM
 </h1></a>
 <div class="clear"></div>
@@ -73,13 +74,16 @@ Masa tenisini, futbolu ve basketbol en sevdiğim sporlardır. Satranç, bulmaca,
 
 </div>
 <div style="clear: both;"></div>
-<div style="position: relative; top:150px; padding-left: 40px;">
-    <form action="Untitled-1.php" method="post">
-        Name: <input type="text" name="name"><br>
-        E-mail: <input type="text" name="email"><br>
-        <input type="submit">
-        </form>
+
+<a href="İletisim.html" style="text-decoration: none;">
+<div style="position: relative; top:80px; text-align: center; border-style: double; border-color: white;">
+<h1 style="color:white;">
+    İLETİŞİM
+</h1>
 </div>
+
+</a>
 </div>
+
 </body>
 </html>
