--- a/Proje/Tarihçe.html
+++ b/Proje/Tarihçe.html
@@ -23,7 +23,7 @@
 <body style="background-image: url(tarihce.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
   <nav class="navbar">
    <a href="Şehrim.html" style="text-decoration: none;"> <h1  id="Adıyaman">Adıyaman</h1></a>
-    <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
+    <a class="Sett" href="index.html">Hakkında</a>
     <a class="Sett" href="Deprem.html">Deprem</a>
     <a class="Sett" href="Şehrim.html">Şehrim</a>
     <a class="Sett" href="Tarihçe.html">Mirasımız</a>
