--- a/Proje/index.html
+++ b/Proje/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,7 +45,7 @@
     <div style="background-color: rgb(0,0,0,.5); height: 100vh;">
     <nav class="navbar" >
         <a href="Şehrim.html" style="text-decoration: none;"><h1  id="Adıyaman">Adıyaman</h1></a>
-        <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
+        <a class="Sett" href="index.html">Hakkında</a>
         <a class="Sett" href="Deprem.html">Deprem</a>
         <a class="Sett" href="Şehrim.html">Şehrim</a>
         <a class="Sett" href="Tarihçe.html">Mirasımız</a>
@@ -52,10 +53,11 @@
 
 <div style="width: 50%;">
     <img style="width: 150px; border-radius: 100px; position: relative; left:20%; float:left;" src="selfie.jpg">
-    <h3 id="name" > Hasan.</h3>
+    <h3 id="name" style="float: left;" > Hasan.</h3>
+   <a href="login.html"> <h4 style="float:right; color:white; border-style: double; border-color: white; position:relative;;left:670px;">Giriş Yap</h4></a>
 </div>
 <br><br><br><br><br><br>
-<p id="hakkımda" > Ben Hasan. İstanbul'da yaşıyorum. Genelde çalışmadığım zamanlarda kitap okumayı, dizi-film izlemeyi ve yürümeyi severim.
+<p id="hakkımda" style="clear: both;"> Ben Hasan. İstanbul'da yaşıyorum. Genelde çalışmadığım zamanlarda kitap okumayı, dizi-film izlemeyi ve yürümeyi severim.
 Masa tenisini, futbolu ve basketbol en sevdiğim sporlardır. Satranç, bulmaca, puzzle gibi aktiviteler de sevdiğim aktiviteler arasındadır.
 </p>
 <a href="özgeçmis.pdf"><h1 style="text-align: center; position: relative; top:20px;border-style: double; width:45%; float: right; color:white;">
@@ -76,14 +78,14 @@ Masa tenisini, futbolu ve basketbol en sevdiğim sporlardır. Satranç, bulmaca,
 <div style="clear: both;"></div>
 
 <a href="İletisim.html" style="text-decoration: none;">
-<div style="position: relative; top:80px; text-align: center; border-style: double; border-color: white;">
+<div style="position: relative; top:100px; text-align: center; border-style: double; border-color: white;">
 <h1 style="color:white;">
     İLETİŞİM
 </h1>
 </div>
 
 </a>
-</div>
 
+</div>
 </body>
 </html>
