--- a/Proje/login.html
+++ b/Proje/login.html
@@ -21,7 +21,7 @@
                     alert("Şifre ya da Email hatalı.");
                     return;
                 }
-                window.location.href = "HakkımdaAfter.html";
+                window.location.href = "index.html";
             }
             else
             {
@@ -44,7 +44,7 @@
     <div class="clear"></div>
     </div>
     <div id="bosluk">&nbsp;</div>
-    <form id="ana" action="HakkımdaAfter.html" method="post">
+    <form id="ana" action="index.html" method="post">
     <div>
         <div style="text-align: center;">
             
