--- a/Proje/Şehrim.html
+++ b/Proje/Şehrim.html
@@ -41,7 +41,7 @@
 <body style="background-image: url(sehrimback.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <nav class="navbar">
         <a href="Şehrim.html" style="text-decoration: none;" ><h1   style="text-decoration: none;" id="Adıyaman">Adıyaman</h1></a>
-        <a class="Sett" href="HakkımdaAfter.html">Hakkında</a>
+        <a class="Sett" href="index.html">Hakkında</a>
         <a class="Sett" href="Deprem.html">Deprem</a>
         <a class="Sett" href="Şehrim.html">Şehrim</a>
         <a class="Sett" href="Tarihçe.html">Mirasımız</a>
